fixed the flex with the help of a mate it went well except that one is unaligned.

--- a/css/style2.css
+++ b/css/style2.css
@@ -6,10 +6,11 @@
     "a a"
     "b c"
     "d e";
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 3fr 3fr;
 background-color: #b58b63;
 display: grid;
+align-items: start;
 }
 
 #header {
@@ -30,15 +31,16 @@ display: grid;
     justify-items: center;
   }
 
-  #fika {
+  .fika {
     display: flex;
     background-color: #a5b58d;
     grid-area: b;
     flex-wrap: wrap;
     flex-direction: column;
+    align-self: stretch;
   }
 
-  #fika section {
+  .fika section {
     background-color: #f6efe8;
     font-size: 22px;
     justify-items: center;
@@ -48,14 +50,14 @@ display: grid;
     flex-wrap: wrap;
   }
 
-  #truth {
+  .truth {
     display: flex;       
     flex-direction: row;  
     flex-wrap: wrap;      
     gap: 10px;
   }
   
-  #truth div {
+  .truth div {
     width: 130px;
     height: 130px;
     background-color: #f6efe8;
@@ -64,15 +66,17 @@ display: grid;
     justify-content: center;
   }
 
-  #dryck {
+  .dryck {
     display: flex;
     background-color: #a5b58d;
     grid-area: c;
     flex-wrap: wrap;
-
+    align-self: stretch;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 
-  #dryck section {
+  .dryck section {
     background-color: #f6efe8;
     font-size: 22px;
     width: 130px;
@@ -82,14 +86,14 @@ display: grid;
     height: 130px;
   }
 
-  #truth2 {
+  .truth2 {
     display: flex;       
     flex-direction: row;  
     flex-wrap: wrap;      
     gap: 10px;
   }
   
-  #truth2 div {
+  .truth2 div {
     width: 130px;
     height: 130px;
     background-color: #f6efe8;
@@ -98,15 +102,15 @@ display: grid;
     justify-content: center;
   }
 
-  #mat {
+  .mat {
     display: flex;
     background-color: #a5b58d;
     grid-area: d;
     flex-wrap: wrap;
-
+    align-self: stretch;
   }
 
-  #mat section {
+  .mat section {
     background-color: #f6efe8;
     font-size: 22px;
     width: 130px;
@@ -116,14 +120,14 @@ display: grid;
     height: 130px;
   }
 
-  #truth3 {
+  .truth3 {
     display: flex;       
     flex-direction: row;  
     flex-wrap: wrap;      
     gap: 10px;
   }
   
-  #truth3 div {
+  .truth3 div {
     width: 130px;
     height: 130px;
     background-color: #f6efe8;
@@ -132,15 +136,15 @@ display: grid;
     justify-content: center;
   }
 
-  #special {
+  .special {
     display: flex;
     background-color: #a5b58d;
     grid-area: e;
     flex-wrap: wrap;
-
+    align-self: stretch;
   }
 
-  #special section {
+  .special section {
     background-color: #f6efe8;
     font-size: 22px;
     width: 130px;
@@ -150,14 +154,14 @@ display: grid;
     height: 130px;
   }
 
-  #truth4 {
+  .truth4 {
     display: flex;       
     flex-direction: row;  
     flex-wrap: wrap;      
     gap: 10px;
   }
   
-  #truth4 div {
+  .truth4 div {
     width: 130px;
     height: 130px;
     background-color: #f6efe8;
@@ -166,6 +170,3 @@ display: grid;
     justify-content: center;
   }
 
-  h2 {
-    text-align: center;
-  }
